--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
+    "react-router-dom": "5.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
