--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@toast-ui/editor": "^3.1.3",
+    "@toast-ui/react-editor": "^3.1.3",
     "axios": "^0.26.0",
     "connected-react-router": "6.8.0",
     "history": "4.10.1",
